--- a/TweetApp/pom.xml
+++ b/TweetApp/pom.xml
@@ -16,6 +16,7 @@
 	<description>Tweet application</description>
 	<properties>
 		<java.version>1.8</java.version>
+		 <sonar.exclusions>**/ValidationData.java,**/LoginData.java, **/UserDaoImpl.java, **/TweetDaoImpl.java, **/UserController.java, **/NonUserController.java</sonar.exclusions> 		 		 		 		 		 
 	</properties>
 	<dependencies>
 		<dependency>
@@ -76,6 +77,30 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.8.0.2131</version>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.5</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
