--- a/TweetApp/buildspec.yml
+++ b/TweetApp/buildspec.yml
@@ -4,7 +4,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - cd $Tweet_App/TweetApp
+      - cd $TweetApp
       - mvn clean install
       - echo Logging in to Amazon ECR...
       - aws --version
