--- a/TweetApp/pom.xml
+++ b/TweetApp/pom.xml
@@ -16,7 +16,9 @@
 	<description>Tweet application</description>
 	<properties>
 		<java.version>1.8</java.version>
-		 <sonar.exclusions>**/ValidationData.java,**/LoginData.java, **/UserDaoImpl.java, **/TweetDaoImpl.java, **/UserController.java, **/NonUserController.java</sonar.exclusions> 		 		 		 		 		 
+		<sonar.exclusions>**/ValidationData.java,**/LoginData.java,
+			**/UserDaoImpl.java, **/TweetDaoImpl.java, **/UserController.java,
+			**/NonUserController.java</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,6 +75,7 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+
 
 	</dependencies>
 
