--- a/TweetApp/src/main/resources/application.properties
+++ b/TweetApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/tweetdb
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:pass@word1}
+spring.datasource.url=jdbc:mysql://18.188.149.198:3306/tweetdb
+spring.datasource.username=root
+spring.datasource.password=pass@word1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
